--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ function MM_swapImage() { //v3.0
 </div>
 <div data-role="main" class="ui-content">
 <!-- Start WOWSlider.com -->
-<iframe src="visor/indexvisor.html" style="width:95%;height:56%;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
+<iframe src="visor/indexvisor.html" style="width:95%;height:60%;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
 <!-- End WOWSlider.com -->
 </div>
 
@@ -156,7 +156,7 @@ function MM_swapImage() { //v3.0
 <p>Sin el conocimiento de Nelson, el 22 de abril de 1970 fue, por coincidencia, el centésimo aniversario del natalicio de Lenin, cuando se trasladó al calendario gregoriano, el cual fue adoptado por los rusos hasta 1918. La revista Time reportó que muchos no pensaron que la fecha fuera una coincidencia, sino una pista de que el evento fue un “engaño comunista”, y citaron a un miembro de Daughters of the American Revolution, diciendo: “elementos subversivos planean hacer que los niños americanos vivan en un ambiente que sea bueno para ellos”. John Edgar Hoover, director del Buró Federal de Investigaciones, pudo haber creado la intriga de la conexión con Lenin, ya que se presumía que el FBI llevaba a cabo tareas de vigilancia en las manifestaciones de 1970. La idea de que la fecha fuera escogida para celebrar el centenario de Lenin, aún persiste en algunos cuarteles.</p>
  <h3 align="center">Documental del Planeta Tierra</h3>
  <div>
- <iframe width="560" height="315" src="https://www.youtube.com/embed/4YQfjo-JpXQ" frameborder="0" allowfullscreen></iframe>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/7L1S_fldOHw" frameborder="0" allowfullscreen></iframe>
  </div>
  </div>
  </div>
@@ -289,7 +289,7 @@ function MM_swapImage() { //v3.0
  <p>Yo como puedo colaborar para que no tiren la basura, hablar con mi comunidad y apoyarnos para que no tiren mas basura y recoger la basura que este tirada.</p>
  <p>Y los graffitis pues llamar a la policia y los sancionen.</p>
 <!-- Start WOWSlider.com -->
-<iframe src="visor/indexvisor1.html" style="width:95%;height:56%;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
+<iframe src="visor/indexvisor1.html" style="width:95%;height:60%;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
 <!-- End WOWSlider.com -->
  </div>
  <div data-role="footer" data-theme="a" data-position="fixed">
